can delete car from admin dashboard, and fix css on mobile of buttons of feedback in admin dashboard

--- a/front/src/Pages/Admin/AdminSection/AdminFeedback/AdminFeedback.scss
+++ b/front/src/Pages/Admin/AdminSection/AdminFeedback/AdminFeedback.scss
@@ -23,6 +23,9 @@ $widthLittleElement: 20%;
     font-size: 10px;
   }
 
+  .admin-feedback-validate-container {
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 769px) {
@@ -41,6 +44,10 @@ $widthLittleElement: 20%;
     align-items: center;
     justify-content: center;
     border: none;
+  }
+
+  .admin-feedback-validate-container {
+    flex-direction: row;
   }
 }
 
@@ -95,17 +102,10 @@ $widthLittleElement: 20%;
 .admin-feedback-validate-container {
   width: $widthLittleElement;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
 
-
 .admin-feedback-validate-select{
   width: 50%;
-}
-
-select {
-  background-color: app.$buttonColor;
-  color: aliceblue;
 }
